Fixed little whitespace in the start of warc header.

--- a/src/js/src/assets/styles/results.scss
+++ b/src/js/src/assets/styles/results.scss
@@ -286,10 +286,10 @@ margin: 1em 0 0 0;
 
 .warcHeaderInfo {
   height:auto;
-  white-space: pre-wrap;      /* CSS3 */   
-  white-space: -moz-pre-wrap; /* Firefox */    
-  white-space: -pre-wrap;     /* Opera <7 */   
-  white-space: -o-pre-wrap;   /* Opera 7 */    
+  white-space: pre-line;      /* CSS3 */   
+  white-space: -moz-pre-line; /* Firefox */    
+  white-space: -pre-line;     /* Opera <7 */   
+  white-space: -o-pre-line;   /* Opera 7 */    
   word-wrap: break-word;      /* IE */
 }
 
